# baggy-bounds

./: README.md
lib/: Makefile  address_constants.h  allocator.c  baggy_init.c  baggy_libc.c  baggy_slowpath.c  initialization.cpp  list.h  move_stack.S  pointer.c  test-allocator.sh  test.c  util.c  zoobar_makefile
lib/start/: README  start.S
pass/: CMakeLists.txt
pass/BaggyBounds/: BaggyBounds.cpp  BaggyBoundsGlobals.cpp  BaggyBoundsPointers.cpp  BaggyBoundsPointersOpt.cpp  BaggyBoundsRewriter.cpp  BaggyBoundsSaveLocal.cpp  BaggyBoundsSaveLocalOpt.cpp  BaggyLoopAnalysis.cpp  CMakeLists.txt  EscapeTracking.cpp  Makefile  Util.cpp  Util.h
report/: presentation.tex
test/: Makefile  benchmarks.sh  benchoutput-opt.txt  benchoutput.txt  buildplots.sh  find_and_run_tests.py  hello.cpp  performance_graph.cpp  plot.py  runtest.py  runtests.sh  test-1.cpp  test-3.cpp  test.cpp
test/inputs/: seating.in-1  seating.in-10  seating.in-2  seating.in-3  seating.in-4  seating.in-5  seating.in-6  seating.in-7  seating.in-9
test/outputs/: args.out  dont_overwrite.out  matrix_mult.out  operations.out  qsort_vector.out  seating.out-10  seating.out-4  seating.out-5  seating.out-6  seating.out-7  seating.out-8  seating.out-9  stress_slowpath.out  test-12.out.output  test-13.out  test-5.out  test-6.out  test-7.out.output
test/tests/: args.cpp  dont_overwrite.cpp  matrix_mult.cpp  operations.cpp  qsort.cpp  qsort_vector.cpp  reg.cpp  seating.cpp  stress_slowpath.cpp  test-10.cpp  test-11.cpp  test-12.cpp  test-13.cpp  test-2.cpp  test-3.cpp  test-4.cpp  test-5.cpp  test-6.cpp  (+3 more)
